Password Manager 20.1.0
* Card fields can be reordered
* Usability improvements
* Java 13
* Application packages for Windows and OS X